# sanrio-characters

./: .gitignore  README.md  pyproject.toml  sanrio_fastmcp.json
docs/: ARCHITECTURE.md  USAGE.md
sanrio_characters/: __init__.py  server.py
sanrio_characters/data/ologs/: sanrio.olog.yaml  sanrio_intentionality.olog.yaml
sanrio_characters/tools/: __init__.py  olog_loader.py
tests/: test_server.py
