[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanrio-characters"
version = "1.0.0"
description = "Categorical specification of Sanrio character design aesthetics using ologs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Lushy", email = "contact@lushy.ai"}
]
keywords = ["aesthetics", "design", "category-theory", "ologs", "mcp", "character-design"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "fastmcp>=0.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "ruff>=0.1.0",
]

[project.scripts]
sanrio-characters = "sanrio_characters.server:run_server"

[project.urls]
Homepage = "https://github.com/lushy/sanrio-characters"
Documentation = "https://github.com/lushy/sanrio-characters#readme"
Repository = "https://github.com/lushy/sanrio-characters.git"
Issues = "https://github.com/lushy/sanrio-characters/issues"

[tool.setuptools]
packages = ["sanrio_characters", "sanrio_characters.tools"]

[tool.setuptools.package-data]
sanrio_characters = [
    "data/ologs/*.yaml",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sanrio_characters --cov-report=html --cov-report=term-missing"